--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,29 @@ services:
     environment: 
       POSTGRES_USER: kong
       POSTGRES_DB: kong
+      POSTGRES_PASSWORD: kong
+    restart: always
+
+  kong-gateway:
+    image: kong:1.1.1-alpine
+    container_name: kong-gateway
+    links: 
+      - "kong-database:kong-database"
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_PASSWORD: kong
+      KONG_CASSANDRA_CONTACT_POINTS: kong-database
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
+    ports:
+      - "8000:8000/tcp"
+      - "8001:8001/tcp"
+      - "8443:8443/tcp"
+      - "8444:8444/tcp"
     restart: always
   
   kong-migrations:
@@ -23,29 +46,9 @@ services:
     links:
       - "kong-database:kong-database"
 
-  kong-gateway:
-    image: kong:1.1.1-alpine
-    container_name: kong-gateway
-    links: 
-      - "kong-database:kong-database"
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_CASSANDRA_CONTACT_POINTS: kong-database
-      KONG_PROXY_ACCESS_LOG: /dev/stdout
-      KONG_ADMIN_ACCESS_LOG: /dev/stdout
-      KONG_PROXY_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
-    ports:
-      - "8000:8000/tcp"
-      - "8001:8001/tcp"
-      - "8443:8443/tcp"
-      - "8444:8444/tcp"
-    restart: always
-
   konga-admin:
     image: pantsel/konga
+    container_name: kong-admin
     ports: 
       - "1337:1337"
     environment: 
